--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,11 @@
     "psr-4": {
       "App\\": "controller/",
       "Core\\": "core/"
-    }
+    },
+    "files": ["core/helper.php"]
   },
   "require": {
-    "symfony/var-dumper": "^3.3"
+    "symfony/var-dumper": "^3.3",
+    "philo/laravel-blade": "^3.1"
   }
 }
